--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,7 +45,9 @@ dev_dependencies:
 flutter_icons:
   android: true
   ios: true
-  image_path: "assets/icon/App_icon.png"
+  image_path: "assets/App_icon.png"
+  adaptive_icon_foreground: "assets/App_icon.png"
+  adaptive_icon_background: "#000000"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
